Bug 663375 - When text color is darkened, darken text-decoration color too.  r=dbaron